--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Chess</title>
     <meta charset=utf8>
-    <meta author="joshua.marshall.moore@gmail.com">
+    <meta author="joshua_marshall_moore@yahoo.com">
     <link rel="stylesheet" href="chess.css">
     <script type="text/javascript" src="lib/jquery-1.12.2.min.js"></script>
     <script type="text/javascript" src="lib/jquery-ui.min.js"></script>
